# brain-go-brr-v2

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURAL_INSTABILITY_FIX.md  ARCHITECTURE_CLARIFICATION.md  ARCHITECTURE_STATUS_REPORT.md  ASCII_PIPELINE_PLAN.md  AUDIT_SUMMARY.md  BLOCKERS.md  BRAINSTORMING_PHASE6.md  BUGS.md  CACHE_DIRECTORY_STRUCTURE.md  CACHE_STATUS.md  CACHE_UPLOAD_PROCEDURE.md  CANONICAL_ARCHITECTURE_SPEC.md  CANONICAL_SPEC_AUDIT_RESULTS.md  CHANGELOG.md  CHANGELOG_UPDATE.md  CLAUDE copy.md  CLAUDE.md  CLEANUP_DEBT.md  CLEANUP_REPORT.md  COMPLETE_SETUP_GUIDE.md  CONFIG_AUDIT_AND_CLEANUP.md  CONFIG_VERIFICATION.md  CRITICAL_CACHE_FUCKUP_POSTMORTEM.md  CRITICAL_FEEDBACK.md  CURRENT_STATUS.md  DEPLOYMENT_AND_TRAINING.md  DOCS_SSOT.md  DYNAMIC_LPE_IMPLEMENTATION.md  DYNAMIC_PE_MEMORY_SOLUTION.md  EVALUATION_CHECKLIST.md  EXPERIMENT_TRACKING.md  FINAL_QUESTIONS.md  FINAL_STACK_ANALYSIS copy.md  FINAL_STACK_ANALYSIS.md  FIX_SUMMARY_20250921.md  (+141 more)
.claude/: settings.local.json
.github/: CI_README.md
.github/workflows/: ci-gpu.yml  ci.yml  pr-title.yml  release.yml
configs/: CONFIG_CONSISTENCY_CHECK.md  LOCAL_CONFIG_CONSISTENCY.md  MODAL_A100_CONSISTENCY.md  README.md  local.yaml  production.yaml  seizure_local.yaml  smoke_test.yaml  tusz_dev_tuning.yaml  tusz_eval_final.yaml  tusz_train.yaml  tusz_train_a100.yaml  tusz_train_wsl2.yaml
configs/archive/: production.yaml  tusz_eval_final.yaml  tusz_train_a100.yaml
configs/local/: dev.yaml  eval.yaml  smoke.yaml  smoke_gnn_lpe.yaml  smoke_pr1.yaml  smoke_tcn.yaml  smoke_v2.6.yaml  smoke_v3.yaml  train.yaml  train_gnn_lpe.yaml  train_tcn.yaml  train_v2.6.yaml
configs/modal/: dev.yaml  dev_a100.yaml  eval.yaml  eval_a100.yaml  smoke.yaml  smoke_a100.yaml  train.yaml  train_a100.yaml  train_gnn.yaml  train_tcn.yaml
deploy/modal/: LESSONS_LEARNED.md  MODAL_PIPELINE_SETUP.md  PREFLIGHT_STRATEGY.md  README.md  __init__.py  app.py  cache_optimizer.py  cleanup_volume.py  explore_volumes.py  inspect_volume.py
docs/: ARCHITECTURAL_NAN_ANALYSIS.md  ARCHITECTURE_STATUS_REPORT.md  ARCHITECTURE_TRUTH.md  ARCHIVE-ANALYSIS-COMPLETE.md  ARCHIVE-MIGRATION-DECISION.md  ARCHIVE-PRESERVATION-COMPLETE.md  ARCHIVE_MAPPING.md  BUGS.md  BUGS_FIXED.md  CACHE_REBUILD_REQUIRED.md  CONFIG_SCHEMA_VALIDATION.md  CONFIG_STATUS_FINAL.md  CRITICAL-NAMING-CONVENTION.md  CURRENT_STATUS.md  DOCS_SSOT.md  FINAL_QUESTIONS.md  FREQUENCY_ANALYSIS_EXPERIMENT.md  GNN_LPE_CRITICAL_ANALYSIS.md  HARDWARE_REALITY_CHECK.md  HISTORY.md  KNOWN_ISSUES.md  LITERATURE_ANSWERS.md  MODAL_CONFIG_STATUS.md  MODAL_STATUS.txt  NAN_COMPREHENSIVE_FIXES.md  NAN_LOGITS_ROOT_CAUSE_ANALYSIS.md  OPTIMAL_RTX4090_CONFIG.md  OPTIMIZATIONS_APPLIED.md  PROPOSED_STRUCTURE.md  README.md  S3-MODAL-CACHE-UPLOAD-PROCEDURE.md  SMOKE_TEST_FIX.md  TROUBLESHOOTING_MODAL_VS_LOCAL.md  V3_ARCHITECTURE_AS_IMPLEMENTED.md  V3_FINAL_IRONCLAD.md  V3_FINAL_STATUS.md  V3_FULL_EVOBRAIN_MIGRATION_PLAN.md  V3_INVESTIGATION_FINDINGS.md  archived_index.md  debug_v3_training.py
docs/00-overview/: architecture-summary.md  overview.md  performance-targets.md
docs/01-data/: README.md
docs/01-data-pipeline/: CACHE_MANIFEST_ARCHITECTURE.md  CRITICAL-ISSUES-RESOLVED.md  P0_BLOCKERS.md  PIPELINE_FLOW_DIAGRAM.md  cache-rebuild.md  data-io.md  tusz-csv-parser.md  tusz-preflight.md
docs/01-installation/: env-setup.md  gpu-stack.md  preflight-checks.md
docs/02-architecture/: AUDIT-SUMMARY.md  CANONICAL-SPEC-AUDIT.md  architecture-comparison.md  canonical-spec.md  model-decoder.md  model-full.md  model-mamba.md  model-unet.md  pipeline-diagram.md  stack-analysis.md
docs/02-data/: cache-layout.md  overview.md  preprocessing.md
docs/03-configuration/: config-schema.md  env-vars.md  local-configs.md  modal-configs.md  schema-validation.md
docs/03-deployment/: README.md  troubleshooting.md
docs/03-operations/: deploy-local-wsl2.md  deploy-modal.md  deploy-preflight.md  evaluation.md  postprocessing.md  senior-review.md  training-audit.md  training.md  troubleshooting.md
docs/04-model/: edge-features-and-adjacency.md  gnn.md  laplacian-pe.md  mamba.md  postprocess.md  tcn.md  time-frequency-hybrid.md  v3-architecture.md
docs/04-reference/: benchmarks.md  configs.md
docs/04-research/: evobrain-extraction.md
docs/05-research/: channel-annotations.md
docs/05-training/: checkpoint-strategy.md  local.md  modal-deployment.md  modal.md  monitoring.md  resume.md  smoke-tests.md
docs/06-evaluation/: metrics-and-taes.md
docs/07-cli-tools/: cli-usage.md  makefile-commands.md
docs/08-operations/: modal-volume-architecture.md  nan-logits-dynamic-pe.md  nan-prevention-complete.md  nan-troubleshooting.md  performance-optimization.md  streaming.md  troubleshooting.md  v3-nan-explosion-resolution.md  wsl2-notes.md
docs/09-development/: bug-tracker.md  coding-standards.md  technical-debt.md  testing.md  versioning-and-roadmap.md
docs/ARCHIVE/: ARCHIVE_MAPPING.md  CLEANUP_DEBT.md  MODAL_CACHE_STRATEGY.md  NAN_CANONICAL.md  V3_ARCHITECTURE_FINAL.md
docs/TUSZ/: MYSZ_CRISIS_POSTMORTEM.md  README.md  TUSZ_SAMPLING_STRATEGY.md
docs/WSL2/: CUDA_PERFORMANCE_FINDINGS.md  WSL2_GPU_SETUP.md  WSL2_TROUBLESHOOTING.md
docs/architecture/: CANONICAL_ARCHITECTURE_SPEC.md  FINAL_STACK_ANALYSIS.md  NOVEL_ARCHITECTURE.md  README.md
docs/archive/: ARCHITECTURE_EVOLUTION.md  CLEANUP_REPORT.md  CONFIG_STATUS_FINAL.md  CRITICAL_FIX_PATIENT_LEAKAGE.md  DYNAMIC_PE_MEMORY_SOLUTION.md  EXPERIMENT_TRACKING.md  FREQUENCY_ANALYSIS_EXPERIMENT.md  HARDWARE_REALITY_CHECK.md  HISTORY.md  MIGRATION_NOTES.md  (+31 more)
docs_archive/: README.md
docs_new/: DOCS_SSOT.md  HISTORY.md  README.md
literature/: pdf_to_markdown.py
scripts/: test_model.py  upload_cache_to_s3.sh  validate_data.py
src/: __init__.py  __main__.py  cli.py
tests/: conftest.py  gpu_memory_guard.py  test_config.py  test_data.py  test_decoder.py  test_encoder.py  test_evaluate.py  test_events.py  test_full_model.py  test_interpolation.py  test_mamba.py  test_postprocess.py  test_rescnn.py  test_streaming.py  test_training.py
(+316 files in other folders)
