[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seizure-detection-mamba"
version = "2.3.0"
description = "Seizure detection using TCN + Bi-Mamba-2 for O(N) EEG processing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Clarity Digital Twin Team", email = "team@clarity.ai"},
]
keywords = ["eeg", "seizure detection", "mamba", "u-net", "state space model", "taes", "nedc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core ML dependencies - EXACT VERSIONS REQUIRED
    "torch==2.2.2",  # EXACT: PyTorch 2.2.2 with CUDA 12.1 required for mamba-ssm
    "numpy>=1.26.0,<2.0",  # numpy 2.x breaks mamba-ssm, use 1.26.4
    "scipy>=1.11.0,<1.14",  # Tested with 1.11.4
    "scikit-learn>=1.3.0,<1.4",  # Tested with 1.3.2

    # EEG Processing
    "mne>=1.5.0",
    "pyedflib>=0.1.30",

    # Deep Learning Components
    "einops>=0.7.0",
    # Mamba SSM moved to optional GPU extra for CI stability

    # Configuration & Validation
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "click>=8.1.7",
    "rich>=13.0.0",
    
    # Data science and ML
    
    # Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    
    # Utilities
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
# GPU packages CANNOT be installed via UV extras!
# They require PyTorch at build time and must use --no-build-isolation
# Install manually with: make setup-gpu
# Required versions:
#   mamba-ssm==2.2.2 (2.2.5 has bugs, 2.2.4 has issues)
#   causal-conv1d==1.4.0 (1.5+ requires PyTorch 2.4+)

# Optional extras for specific feature sets
# Install with, e.g.: uv sync -E eval
# Note: scipy (for morphology) is already in base dependencies
eval = [
    "pandas>=2.0.0",
]
monitoring = [
    "wandb>=0.16.0",
]
tcn = [
    "pytorch-tcn==1.2.3",  # Temporal Convolutional Networks
]

[tool.uv]
managed = true
dev-dependencies = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0", # Parallel testing
    "pytest-sugar>=1.0.0", # Better test output
    "pytest-mock>=3.12.0",
    # Code Quality (Ruff replaces black/isort/flake8)
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pre-commit-uv>=0.4.0", # Speed up pre-commit
    # Notebooks
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "nbformat>=5.0.0",
    "ipywidgets>=8.0.0",
    # Docs
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    # Visualization/monitoring
    "tensorboard>=2.12.0",
    "types-pyyaml>=6.0.12.20250915",
    "pytest-timeout>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/clarity-digital-twin/brain-go-brr-v2"
Repository = "https://github.com/clarity-digital-twin/brain-go-brr-v2.git"
Issues = "https://github.com/clarity-digital-twin/brain-go-brr-v2/issues"

[project.scripts]
train = "src.brain_brr.train.loop:main"
# Route scripts to unified CLI in brain_brr
evaluate = "src.brain_brr.cli.cli:main"
run-experiment = "src.brain_brr.cli.cli:main"

[tool.hatch.version]
path = "src/brain_brr/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/configs",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = """
    --tb=short
    --strict-markers
    --strict-config
    --timeout=60
    --timeout-method=thread
    --max-worker-restart=0
    -v
"""
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "serial: run this test alone to avoid resource contention",
    "clinical: marks tests for clinical validation metrics",
    "performance: performance/latency benchmarks (not run in CI)",
    "gpu: marks tests that can use GPU acceleration",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest-style
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow asserts in tests

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

# Handle optional dependencies that may not be installed in CI
[[tool.mypy.overrides]]
module = "pytorch_tcn"
ignore_missing_imports = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*", 
    "torchvision.*",
    "matplotlib.*",
    "seaborn.*",
    "mamba_ssm.*",
]
ignore_missing_imports = true
